mdapi/objects/BudgetPartnerAssignment__c/BudgetPartnerAssignment__c.object-meta.xml
<CustomObject>
    <label>Budget Partner Assignment</label>
    <nameField>
        <label>Budget Partner Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Partner Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>