mdapi/objects/BudgetPartnerAssignment__c/fields/Amount_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Amount_Assigned__c</fullName>
    <formula>Budget__r.Total_Amount__c *  AllocationPercentage__c</formula>
    <label>Amount Assigned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>