mdapi/objects/BudgetPartnerAssignment__c/fields/BudgetName__c.field-meta.xml
<CustomField>
    <fullName>BudgetName__c</fullName>
    <formula>Budget__r.Name</formula>
    <label>Budget Name</label>
    <type>Text</type>
</CustomField>