mdapi/objects/BudgetPartnerAssignment__c/fields/PartnerName__c.field-meta.xml
<CustomField>
    <fullName>PartnerName__c</fullName>
    <formula>Account__r.Name</formula>
    <label>Partner Name</label>
    <type>Text</type>
</CustomField>