mdapi/objects/BudgetPartnerAssignment__c/fields/Total_Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Amount__c</fullName>
    <formula>Budget__r.Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Budget Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>